<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/spacing_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/spacing_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/spacing_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/spacing_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="0dp"
        android:layout_height="@dimen/spacing_64"
        android:contentDescription="@null"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_top" />

    <Button
        android:id="@+id/buttonNewGame"
        style="@style/ButtonOrange"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_24"
        android:layout_marginEnd="@dimen/spacing_16"
        android:text="@string/new_game"
        app:icon="@drawable/ic_add"
        app:layout_constraintEnd_toEndOf="@+id/guideline_center"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo" />

    <TextView
        android:id="@+id/textRemaining"
        style="@style/TextStyle.Regular.Semibold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_24"
        android:text="@string/time_remaining"
        android:textColor="@color/white"
        android:textSize="@dimen/caption"
        app:layout_constraintEnd_toEndOf="@+id/guideline_end"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo" />

    <ImageButton
        android:id="@+id/buttonControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/ic_pause"
        app:layout_constraintBottom_toBottomOf="@+id/textTimeRemaining"
        app:layout_constraintEnd_toStartOf="@+id/textRemaining"
        app:layout_constraintTop_toTopOf="@+id/textTimeRemaining"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textTimeRemaining"
        style="@style/TextStyle.Regular.Semibold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_4"
        android:gravity="end"
        android:includeFontPadding="false"
        android:letterSpacing="0.05"
        android:text="@string/time"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="@+id/guideline_end"
        app:layout_constraintTop_toBottomOf="@+id/textRemaining" />

    <com.teyepeee.sudoku.ui.custom.SudokuBoardView
        android:id="@+id/sudokuBoardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_32"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/buttonNewGame" />

    <LinearLayout
        android:id="@+id/layoutNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_16"
        android:layout_marginBottom="@dimen/spacing_24"
        app:layout_constraintBottom_toTopOf="@+id/buttonSolveMe"
        app:layout_constraintEnd_toEndOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/sudokuBoardView"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textOne"
            style="@style/ButtonInput"
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_48"
            android:layout_weight="1"
            android:text="@string/num_1" />

        <TextView
            android:id="@+id/textTwo"
            style="@style/ButtonInput"
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_48"
            android:layout_weight="1"
            android:text="@string/num_2" />

        <TextView
            android:id="@+id/textThree"
            style="@style/ButtonInput"
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_48"
            android:layout_weight="1"
            android:text="@string/num_3" />

        <TextView
            android:id="@+id/textFour"
            style="@style/ButtonInput"
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_48"
            android:layout_weight="1"
            android:text="@string/num_4" />

        <TextView
            android:id="@+id/textFive"
            style="@style/ButtonInput"
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_48"
            android:layout_weight="1"
            android:text="@string/num_5" />

        <TextView
            android:id="@+id/textSix"
            style="@style/ButtonInput"
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_48"
            android:layout_weight="1"
            android:text="@string/num_6" />

        <TextView
            android:id="@+id/textSeven"
            style="@style/ButtonInput"
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_48"
            android:layout_weight="1"
            android:text="@string/num_7" />

        <TextView
            android:id="@+id/textEight"
            style="@style/ButtonInput"
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_48"
            android:layout_weight="1"
            android:text="@string/num_8" />

        <TextView
            android:id="@+id/textNine"
            style="@style/ButtonInput"
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_48"
            android:layout_weight="1"
            android:text="@string/num_9" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonSolveMe"
        style="@style/ButtonGreen"
        android:layout_width="0dp"
        android:layout_height="@dimen/spacing_64"
        android:text="@string/solve_me"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>